--- a/Views/Livro/Listagem.cshtml
+++ b/Views/Livro/Listagem.cshtml
@@ -21,7 +21,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        @if (Model.Count() == 0 || Model.Count() == null)
+        @if (Model.Count() == 0)
         {
             <h3 style="color: red; padding-top: 10px">Nenhum registro encontrado</h3>
             Console.WriteLine(Model.Count());
