--- a/Views/Emprestimo/Listagem.cshtml
+++ b/Views/Emprestimo/Listagem.cshtml
@@ -22,6 +22,12 @@
 
 <div class="row">
     <div class="col-md-12">
+        @if (Model.Count() == 0)
+        {
+            <h3 style="color: red; padding-top: 10px">Nenhum registro encontrado</h3>
+        }
+        else
+        {
         <table class="table table-striped"> 
             <thead>
                 <tr><th>Id</th>
@@ -48,6 +54,7 @@
                 }
             </tbody>
         </table>
+        }
     </div>
 </div>
 
