--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -14,7 +14,7 @@
                 </div>
                 <input type="submit" class="btn btn-primary btn-lg" value="Entrar" />
             </form>
-            <p class="text-danger">@ViewData["Erro"]</p>
+            <p class="text-danger">@ViewData["Erro"] @TempData["SemAcesso"]</p>
         </div>
     </div>
 <!--</div> -->
