--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,6 +32,13 @@
                                 <a class="dropdown-item" href="/Emprestimo/Listagem">Listagem</a>
                             </div>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-light dropdown-toggle" data-toggle="dropdown" href="#">Usuarios</a>
+                            <div class="dropdown-menu" aria-labelledby="menuLivros">
+                                <a class="dropdown-item" href="/Usuarios/Cadastro">Cadastro</a>
+                                <a class="dropdown-item" href="/Usuarios/Listar">Listagem</a>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
