--- a/Views/Livro/Listagem.cshtml
+++ b/Views/Livro/Listagem.cshtml
@@ -27,7 +27,7 @@
         }
         else
         {
-            <table class="table table-striped">
+            <table class="table table-striped display" id="lista-livros">
                 <thead>
                     <tr>
                         <th>Id</th>
